--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install dependencies
-        run: pub get
+        run: flutter get
       - name: Run tests
-        run: pub run test
+        run: flutter test
       - name: Run publish --dry-run
         run: pub publish --dry-run
     # - name: Coveralls GitHub Action
