--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ms_undraw
 description: A new Flutter package for open source illustrations. These illustrations are designed by Katerina Limpitsouni.
-version: 2.1.0
+version: 2.1.0+1
 repository: https://github.com/Marcus-Software/ms_undraw
 
 environment:
