--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ms_undraw
-description: A new Flutter package for open source illustrations. These illustrations are designed by Katerina Limpitsouni.
-version: 2.2.0+1
+description: Updated UnDraw library. These illustrations are designed by Katerina Limpitsouni.
+version: 2.2.0+2
 repository: https://github.com/Marcus-Software/ms_undraw
 
 environment:
