--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.2.0+9
 repository: https://github.com/Marcus-Software/ms_undraw
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -17,5 +17,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.0.0
   build_test: ^0.10.3
+  cli_util: ^0.2.0
+  yaml: ^2.2.1
+  yamlicious: ^0.1.0
 
 flutter:
