--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,20 @@
-name: ms_undraw
-description: Updated UnDraw library. These illustrations are designed by Katerina Limpitsouni.
-version: 2.2.0+9
-repository: https://github.com/Marcus-Software/ms_undraw
-
-environment:
-  sdk: ">=2.3.0 <3.0.0"
-
-dependencies:
-  flutter:
-    sdk: flutter
+description: "Updated UnDraw library. These illustrations are designed by Katerina Limpitsouni."
+name: "ms_undraw"
+repository: "https://github.com/Marcus-Software/ms_undraw"
+version: "2.2.0+10"
+dependencies: 
   flutter_svg: ">=0.13.1 <1.0.0"
   http: ">=0.12.0+2 <1.0.0"
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  build_runner: ^1.0.0
-  build_test: ^0.10.3
-  cli_util: ^0.2.0
-  yaml: ^2.2.1
-  yamlicious: ^0.1.0
-
-flutter:
+  flutter: 
+    sdk: "flutter"
+dev_dependencies: 
+  build_runner: "^1.0.0"
+  build_test: "^0.10.3"
+  cli_util: "^0.2.0"
+  yaml: "^2.2.1"
+  yamlicious: "^0.1.0"
+  flutter_test: 
+    sdk: "flutter"
+environment: 
+  sdk: ">=2.3.0 <3.0.0"
+flutter: null
