--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,18 @@
 description: "Updated UnDraw library. These illustrations are designed by Katerina Limpitsouni."
 name: "ms_undraw"
 repository: "https://github.com/Marcus-Software/ms_undraw"
-version: "2.2.0+15"
+version: "3.0.0+0"
 dependencies: 
-  flutter_svg: ">=0.13.1 <1.0.0"
-  http: ">=0.12.0+2 <1.0.0"
+  flutter_svg: ">=0.21.0 <1.0.0"
+  http: ">=0.13.1 <1.0.0"
   flutter: 
     sdk: "flutter"
-dev_dependencies: 
-  build_runner: "^1.0.0"
-  build_test: "^0.10.3"
-  cli_util: "^0.2.0"
-  yaml: "^2.2.1"
-  yamlicious: "^0.1.0"
+dev_dependencies:
+  cli_util: "^0.3.0"
+  yaml: ^3.1.0
+  fhir_yaml: ^0.4.0
   flutter_test: 
     sdk: "flutter"
 environment: 
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 flutter: null
